# chehana-backend-test

./: .flake8  DECISION_LOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example.txt  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
app/: main.py
app/application/dtos/: auth_dto.py  task_dto.py  task_list_dto.py
app/application/exceptions/: exceptions.py
app/application/services/: auth_service.py  email_service.py
app/application/use_cases/: auth_use_cases.py  task_list_use_cases.py  task_use_cases.py
app/domain/entities/: task.py  task_list.py  user.py
app/domain/repositories/: task_list_repository.py  task_repository.py  user_repository.py
app/infrastructure/api/: dependencies.py
app/infrastructure/api/routers/: auth.py  task_lists.py  tasks.py
app/infrastructure/database/: config.py  models.py
app/infrastructure/repositories/: sqlalchemy_task_list_repository.py  sqlalchemy_task_repository.py  sqlalchemy_user_repository.py
scripts/: init-db.sql
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_entities.py
